--- a/JavaScript Applications/03.SPA/01.Forum/package.json
+++ b/JavaScript Applications/03.SPA/01.Forum/package.json
@@ -13,9 +13,9 @@
     "page": "^1.11.6"
   },
   "devDependencies": {
-    "chai": "4.3.4",
-    "http-server": "0.12.3",
-    "mocha": "8.3.2",
-    "playwright-chromium": "^1.9.2"
+    "chai": "^4.3.4",
+    "http-server": "^14.1.1",
+    "mocha": "^10.1.0",
+    "playwright-chromium": "^1.27.1"
   }
 }
