Deleted unnecessary html-s

--- a/JavaScript Applications/06.Routing/01.Furniture/package.json
+++ b/JavaScript Applications/06.Routing/01.Furniture/package.json
@@ -7,15 +7,18 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lite-server"
+    "test": "mocha tests",
+    "start": "http-server -a localhost -p 3000 -P http://localhost:3000? -c-1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.7",
     "lit-html": "^2.4.0",
     "lite-server": "^2.6.1",
-    "page": "^1.11.6"
+    "mocha": "^10.1.0",
+    "page": "^1.11.6",
+    "playwright-chromium": "^1.27.1"
   }
 }
