--- a/JavaScript Applications/03.SPA/01.Forum/package.json
+++ b/JavaScript Applications/03.SPA/01.Forum/package.json
@@ -4,18 +4,24 @@
   "main": "index.html",
   "scripts": {
     "test": "mocha tests",
-    "start": "http-server -a localhost -p 3000 -P http://localhost:3000? -c-1"
+    "start": "lite-server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lit-html": "^1.3.0",
+    "lit-html": "^1.4.1",
+    "lite-server": "^2.6.1",
     "page": "^1.11.6"
   },
   "devDependencies": {
-    "http-server": "0.12.3",
-    "playwright-chromium": "1.9.2",
-    "mocha": "8.3.2",
-    "chai": "4.3.4"
-  }
+    "chai": "4.3.4",
+    "http-server": "^14.1.1",
+    "mocha": "^10.1.0",
+    "playwright-chromium": "1.9.2"
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "keywords": [],
+  "description": ""
 }
