Completed Retake Exam - 15 August 2022 110/110

--- a/JavaScript Applications/Exam Prep/Retake Exam - 15 August 2022/package.json
+++ b/JavaScript Applications/Exam Prep/Retake Exam - 15 August 2022/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha tests",
     "start": "http-server -a localhost -p 3000 -P http://localhost:3000? -c-1",
-    "dev": "lite-server"
+    "dev": "lite-server",
+    "server": "cd ./server && node ./server.js"
   },
   "author": "",
   "license": "ISC",
